--- a/frontend_app/src/app/app.component.html
+++ b/frontend_app/src/app/app.component.html
@@ -1,3 +1,4 @@
-<div class="container">
-  <h1>{{ title }}</h1>
-</div>
+<app-header></app-header>
+<main class="container" role="main" aria-live="polite">
+  <router-outlet></router-outlet>
+</main>
